# agent-stuffs

./: README.md
mdgate/: README.md  pyproject.toml  test.md
mdgate-py/: pyproject.toml
mdgate-py/src/mdgate/: cli.py  comments.py  config.py  registry.py  server.py  template.py
mdgate/lib/: comments.js  registry.js  server.js  template.js  zrok.js
mdgate/lib/commands/: daemon.js  help.js  init.js  review.js  serve.js  status.js  stop.js
mdgate/src/mdgate/: __main__.py  cli.py  comments.py  server.py  zrok.py
orchestrator/: PLAN.md  QUICKSTART.md  README.md  install.sh
orchestrator/lib/: common.sh  deps.sh  state.sh
orchestrator/schemas/: finalizer-output.json  verifier-output.json  worker-output.json
orchestrator/templates/: plan.md.tmpl  unit.md.tmpl
zellij-pane-highlight/: Cargo.toml  README.md
zellij-pane-highlight/src/: lib.rs  main.rs
