[project]
name = "mdgate"
version = "2.0.0"
description = "Serve markdown files as mobile-friendly web pages over Tailscale"
requires-python = ">=3.11"
license = "ISC"
dependencies = [
    "mistune>=3.0",
    "pygments>=2.17",
]

[project.scripts]
mdgate = "mdgate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdgate"]
